Update simulator configuration files

--- a/configs/ramulator_configs/DDR4-config.cfg
+++ b/configs/ramulator_configs/DDR4-config.cfg
@@ -5,7 +5,7 @@
  standard = DDR4
  channels = 1
  ranks = 1
- speed = DDR4_2400R
+ speed = DDR4_1600K
  org = DDR4_4Gb_x8
 # record_cmd_trace: (default is off): on, off
  record_cmd_trace = off
