Modify configuration for matmul simulation time experiment

--- a/configs/ramulator_configs/DDR4-config.cfg
+++ b/configs/ramulator_configs/DDR4-config.cfg
@@ -3,9 +3,9 @@
 # Comments start with #
 # There are restrictions for valid channel/rank numbers
  standard = DDR4
- channels = 1
+ channels = 2
  ranks = 1
- speed = DDR4_1600K
+ speed = DDR4_3200
  org = DDR4_4Gb_x8
 # record_cmd_trace: (default is off): on, off
  record_cmd_trace = off
