Add HBM configuration correspond to TPUV4i

--- a/configs/ramulator_configs/HBM-config.cfg
+++ b/configs/ramulator_configs/HBM-config.cfg
@@ -3,9 +3,9 @@
 # Comments start with #
 # There are restrictions for valid channel/rank numbers
  standard = HBM
- channels = 32
+ channels = 16
  ranks = 1
- speed = HBM_2Gbps
+ speed = HBM_2_5Gbps
  org = HBM_4Gb
 # record_cmd_trace: (default is off): on, off
  record_cmd_trace = off
