--- a/.gitmodules
+++ b/.gitmodules
@@ -12,4 +12,4 @@
 	url = https://github.com/PSAL-POSTECH/booksim.git
 [submodule "extern/ramulator2"]
 	path = extern/ramulator2
-	url = git@github.com:PSAL-POSTECH/ramulator2.git
+	url = https://github.com:PSAL-POSTECH/ramulator2.git
